# transmission_delete_unwanted

./: .gitignore  README.md  dev-requirements.in  dev-requirements.txt  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: continuous-integration.yml
src/transmission_delete_unwanted/: delete_unwanted.py  file.py  mark_unwanted.py  pieces.py  script.py
tests/: test_delete_unwanted.py  test_file.py  test_pieces.py  test_script.py
transmission_delete_unwanted_tests/: conftest.py  test_delete_unwanted.py  test_mark_unwanted.py
